--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,21 +11,25 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        >
+        android:paddingTop="@dimen/activity_vertical_margin">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Simple custom view of a beating heart using scaling animation"/>
+            android:text="Simple custom view of a beating heart using scaling animation" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_margin="10dp"
+            android:background="@color/colorPrimary" />
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
 
             <ToggleButton
                 android:id="@+id/toggleHeart1"
@@ -35,14 +37,12 @@
                 android:layout_height="wrap_content"
                 android:onClick="heart1onClick"
                 android:textOff="Stop"
-                android:textOn="Start"
-                />
+                android:textOn="Start" />
 
             <com.scottyab.HeartBeatView
                 android:id="@+id/heartbeat"
                 android:layout_width="72dp"
-                android:layout_height="72dp"
-                />
+                android:layout_height="72dp" />
 
         </LinearLayout>
 
@@ -51,15 +51,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="10dp"
-            android:text="Shows varying the colour via tint and using setDuration by BPM"
-            />
+            android:text="Shows varying the colour via tint and using setDuration by BPM" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
 
             <ToggleButton
                 android:id="@+id/toggleHeart2"
@@ -68,16 +66,14 @@
                 android:onClick="heart2onClick"
                 android:textOff="Stop"
                 android:textOn="Start"
-                app:buttonTint="@android:color/holo_blue_bright"
-                />
+                app:buttonTint="@android:color/holo_blue_bright" />
 
             <com.scottyab.HeartBeatView
                 android:id="@+id/heartbeat2"
                 android:layout_width="72dp"
                 android:layout_height="72dp"
                 android:tint="@android:color/holo_blue_bright"
-                app:duration="100"
-                />
+                app:duration="100" />
 
         </LinearLayout>
 
@@ -86,7 +82,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:labelFor="@+id/beatsPerMinSeek"
-            android:text="BPM: 50"/>
+            android:text="BPM: 50" />
 
         <SeekBar
             android:id="@+id/beatsPerMinSeek"
@@ -94,23 +90,20 @@
             android:layout_height="wrap_content"
             android:paddingBottom="16dp"
             android:progressTint="@android:color/holo_blue_bright"
-            android:thumbTint="@android:color/holo_blue_bright"
-            />
+            android:thumbTint="@android:color/holo_blue_bright" />
 
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="10dp"
-            android:text="Increased scale factor"
-            />
+            android:text="Increased scale factor" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
 
             <ToggleButton
                 android:id="@+id/toggleHeart3"
@@ -118,15 +111,13 @@
                 android:layout_height="wrap_content"
                 android:onClick="heart3onClick"
                 android:textOff="Stop"
-                android:textOn="Start"
-                />
+                android:textOn="Start" />
 
             <com.scottyab.HeartBeatView
                 android:id="@+id/heartbeat3"
                 android:layout_width="72dp"
                 android:layout_height="72dp"
-                app:scaleFactor="0.5"
-                />
+                app:scaleFactor="0.5" />
 
         </LinearLayout>
 
